[package]
name = "ddb"
version = "0.1.0"
authors = ["colbyn <hello@colbyn.com>"]
edition = "2018"

[dependencies]
google-datastore1 = "1.0.10"
hyper = "^0.10"
hyper-rustls = "^0.6"
serde = {version = "^1.0", features=["derive"]}
serde_json = "^1.0"
yup-oauth2 = { version = "^1.0", default-features = false }
dirs = "2.0.2"
rand = "0.7.0"


[dev-dependencies]
rand = "0.7.0"
dirs = "2.0.2"
