[package]
name = "ddb"
version = "0.0.1"
authors = ["colbyn <hello@colbyn.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/colbyn/ddb"
homepage = "https://github.com/colbyn/ddb"
description = "Datastore DB - High Level Rust API (with serde support)"
keywords = ["serialization", "datastore", "google", "api", "web"]
readme = "README.md"

[dependencies]
google-datastore1 = "1.0.10"
hyper = "^0.10"
hyper-rustls = "^0.6"
serde = {version = "^1.0", features=["derive"]}
serde_json = "^1.0"
yup-oauth2 = { version = "^1.0", default-features = false }
dirs = "2.0.2"
rand = "0.7.0"

[dev-dependencies]
rand = "0.7.0"
dirs = "2.0.2"
